feat(indicator): confirm allocations and manage time nodes
